<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_Homing" Id="{0bddfcf5-2cc0-4096-a6a0-8eb4f1bffb16}">
    <Declaration><![CDATA[TYPE ST_Homing :
STRUCT
  bExecute      : BIT;

  stHomingParam : ST_HomeParams;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>